--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Hello, wrorld!</h1>
+    <p>Welcome to my firts website! I am about to embark on the exciting journey of learning how to code. won't you join me?</p>
+
+  </body>
+</html>
